syntax = "proto3";

package wandb_internal;

// Record is the main container for all data in .wandb files
message Record {
  int64 num = 1;
  oneof record_type {
    HistoryRecord history = 2;
    SummaryRecord summary = 3;
    OutputRecord output = 4;
    ConfigRecord config = 5;
    FilesRecord files = 6;
    StatsRecord stats = 7;
    ArtifactRecord artifact = 8;
    TBRecord tbrecord = 9;
    AlertRecord alert = 10;
    TelemetryRecord telemetry = 11;
    MetricRecord metric = 12;
    OutputRawRecord output_raw = 13;
    RunRecord run = 17;
    RunExitRecord exit = 18;
    FinalRecord final = 20;
    HeaderRecord header = 21;
    FooterRecord footer = 22;
    RunPreemptingRecord preempting = 23;
    UseArtifactRecord use_artifact = 25;
    EnvironmentRecord environment = 26;
    Request request = 100;
  }
  Control control = 16;
  string uuid = 19;
  RecordInfo info = 200;
}

message RecordInfo {
  string stream_id = 1;
  string tracelog_id = 100;
}

message Control {
  bool req_resp = 1;
  bool local = 2;
  string relay_id = 3;
  string mailbox_slot = 4;
  bool always_send = 5;
  bool flow_control = 6;
  int64 end_offset = 7;
  string connection_id = 8;
}

// History records contain per-step metrics
message HistoryRecord {
  repeated HistoryItem item = 1;
  HistoryStep step = 2;
  RecordInfo info = 200;
}

message HistoryItem {
  string key = 1;
  repeated string nested_key = 2;
  string value_json = 16;
}

message HistoryStep {
  int64 num = 1;
}

// Config records contain run configuration
message ConfigRecord {
  repeated ConfigItem update = 1;
  repeated ConfigItem remove = 2;
  RecordInfo info = 200;
}

message ConfigItem {
  string key = 1;
  repeated string nested_key = 2;
  string value_json = 16;
}

// Summary records contain final summary values
message SummaryRecord {
  repeated SummaryItem update = 1;
  repeated SummaryItem remove = 2;
  RecordInfo info = 200;
}

message SummaryItem {
  string key = 1;
  repeated string nested_key = 2;
  string value_json = 16;
}

// Run metadata
message RunRecord {
  string run_id = 1;
  string entity = 2;
  string project = 3;
  ConfigRecord config = 4;
  SummaryRecord summary = 5;
  string run_group = 6;
  string job_type = 7;
  string display_name = 8;
  string notes = 9;
  repeated string tags = 10;
  SettingsRecord settings = 11;
  string sweep_id = 12;
  string host = 13;
  int64 starting_step = 14;
  string storage_id = 16;
  Timestamp start_time = 17;
  bool resumed = 18;
  TelemetryRecord telemetry = 19;
  int32 runtime = 20;
  GitRepoRecord git = 21;
  bool forked = 22;
  BranchPoint branch_point = 23;
  RecordInfo info = 200;
}

message SettingsRecord {
  repeated SettingsItem item = 1;
  RecordInfo info = 200;
}

message SettingsItem {
  string key = 1;
  string value_json = 16;
}

message GitRepoRecord {
  string remote_url = 1;
  string commit = 2;
}

message BranchPoint {
  string run = 1;
  double value = 2;
  string metric = 3;
}

// System stats
message StatsRecord {
  enum StatsType {
    SYSTEM = 0;
  }
  StatsType stats_type = 1;
  Timestamp timestamp = 2;
  repeated StatsItem item = 3;
  RecordInfo info = 200;
}

message StatsItem {
  string key = 1;
  string value_json = 16;
}

// Output records
message OutputRecord {
  enum OutputType {
    STDERR = 0;
    STDOUT = 1;
  }
  OutputType output_type = 1;
  Timestamp timestamp = 2;
  string line = 3;
  RecordInfo info = 200;
}

message OutputRawRecord {
  enum OutputType {
    STDERR = 0;
    STDOUT = 1;
  }
  OutputType output_type = 1;
  Timestamp timestamp = 2;
  string line = 3;
  RecordInfo info = 200;
}

// Files
message FilesRecord {
  repeated FilesItem files = 1;
  RecordInfo info = 200;
}

message FilesItem {
  enum PolicyType {
    NOW = 0;
    END = 1;
    LIVE = 2;
  }
  enum FileType {
    OTHER = 0;
    WANDB = 1;
    MEDIA = 2;
    ARTIFACT = 3;
  }
  string path = 1;
  PolicyType policy = 2;
  FileType type = 3;
}

// Artifact
message ArtifactRecord {
  string run_id = 1;
  string project = 2;
  string entity = 3;
  string type = 4;
  string name = 5;
  string digest = 6;
  string description = 7;
  string metadata = 8;
  bool user_created = 9;
  bool use_after_commit = 10;
  repeated string aliases = 11;
  ArtifactManifest manifest = 12;
  string distributed_id = 13;
  bool finalize = 14;
  string client_id = 15;
  string sequence_client_id = 16;
  string base_id = 17;
  int64 ttl_duration_seconds = 18;
  repeated string tags = 19;
  bool incremental_beta1 = 100;
  RecordInfo info = 200;
}

message ArtifactManifest {
  int32 version = 1;
  string storage_policy = 2;
  repeated StoragePolicyConfigItem storage_policy_config = 3;
  repeated ArtifactManifestEntry contents = 4;
}

message StoragePolicyConfigItem {
  string key = 1;
  string value = 2;
}

message ArtifactManifestEntry {
  string path = 1;
  string digest = 2;
  string ref = 3;
  int64 size = 4;
  string mimetype = 5;
  string local_path = 6;
  string birth_artifact_id = 7;
  bool skip_cache = 8;
  map<string, string> extra = 16;
}

message UseArtifactRecord {
  string id = 1;
  string type = 2;
  string name = 3;
  PartialJobArtifact partial = 4;
  RecordInfo info = 200;
}

message PartialJobArtifact {
  string job_name = 1;
  string source_info = 2;
}

// TensorBoard
message TBRecord {
  string log_dir = 1;
  bool save = 2;
  string root_dir = 3;
  RecordInfo info = 200;
}

// Alerts
message AlertRecord {
  string title = 1;
  string text = 2;
  string level = 3;
  int64 wait_duration = 4;
  RecordInfo info = 200;
}

// Telemetry
message TelemetryRecord {
  string import_init_module = 1;
  string import_finish_module = 2;
  string feature = 3;
  string env = 4;
  string label = 5;
  bool deprecated = 6;
  int32 issues = 7;
  string python_version = 8;
  string cli_version = 9;
  string huggingface_version = 10;
  RecordInfo info = 200;
}

// Metrics
message MetricRecord {
  string name = 1;
  string glob_name = 2;
  string step_metric = 4;
  int32 step_metric_index = 5;
  MetricOptions options = 6;
  MetricSummary summary = 7;
  MetricGoal goal = 8;
  MetricControl control = 9;
  bool expanded_from_glob = 10;
  RecordInfo info = 200;
}

message MetricOptions {
  bool step_sync = 1;
  bool hidden = 2;
  bool defined = 3;
}

message MetricSummary {
  bool min = 1;
  bool max = 2;
  bool mean = 3;
  bool best = 4;
  bool last = 5;
  bool none = 6;
  bool copy = 7;
}

enum MetricGoal {
  GOAL_UNSET = 0;
  GOAL_MINIMIZE = 1;
  GOAL_MAXIMIZE = 2;
}

message MetricControl {
  bool overwrite = 1;
}

// Environment
message EnvironmentRecord {
  string os = 1;
  string python = 2;
  Timestamp started_at = 3;
  string docker = 4;
  repeated string args = 5;
  string program = 6;
  string code_path = 7;
  string code_path_local = 8;
  GitRepoRecord git = 9;
  string email = 10;
  string root = 11;
  string host = 12;
  string username = 13;
  string executable = 14;
  string colab = 15;
  uint32 cpu_count = 16;
  uint32 cpu_count_logical = 17;
  string gpu_type = 18;
  uint32 gpu_count = 19;
  map<string, DiskInfo> disk = 20;
  MemoryInfo memory = 21;
  CpuInfo cpu = 22;
  AppleInfo apple = 23;
  repeated GpuNvidiaInfo gpu_nvidia = 24;
  string cuda_version = 25;
  repeated GpuAmdInfo gpu_amd = 26;
  map<string, string> slurm = 27;
  string writer_id = 199;
  RecordInfo info = 200;
}

message DiskInfo {
  uint64 total = 1;
  uint64 used = 2;
}

message MemoryInfo {
  uint64 total = 1;
}

message CpuInfo {
  uint32 count = 1;
  uint32 count_logical = 2;
}

message AppleInfo {
  string name = 1;
}

message GpuNvidiaInfo {
  string name = 1;
  uint64 memory_total = 2;
  uint32 cuda_cores = 3;
  string architecture = 4;
  string uuid = 5;
}

message GpuAmdInfo {
  string id = 1;
  string unique_id = 2;
  string vbios_version = 3;
  string performance_level = 4;
  string gpu_overdrive = 5;
  string gpu_memory_overdrive = 6;
  string max_power = 7;
  string series = 8;
  string model = 9;
  string vendor = 10;
  string sku = 11;
  uint64 memory_total = 12;
}

// Exit
message RunExitRecord {
  int32 exit_code = 1;
  int32 runtime = 2;
  RecordInfo info = 200;
}

message RunPreemptingRecord {
  RecordInfo info = 200;
}

message FinalRecord {
  RecordInfo info = 200;
}

message FooterRecord {
  RecordInfo info = 200;
}

message HeaderRecord {
  VersionInfo version_info = 1;
  RecordInfo info = 200;
}

message VersionInfo {
  string producer = 1;
  string min_consumer = 2;
}

// Request/Response
message Request {
  oneof request_type {
    StopStatusRequest stop_status = 1;
    NetworkStatusRequest network_status = 2;
    DeferRequest defer = 3;
    GetSummaryRequest get_summary = 4;
    LoginRequest login = 5;
    PauseRequest pause = 6;
    ResumeRequest resume = 7;
    PollExitRequest poll_exit = 8;
    SampledHistoryRequest sampled_history = 9;
    PartialHistoryRequest partial_history = 10;
    RunStartRequest run_start = 11;
    CheckVersionRequest check_version = 12;
    LogArtifactRequest log_artifact = 13;
    DownloadArtifactRequest download_artifact = 14;
    KeepaliveRequest keepalive = 15;
    RunStatusRequest run_status = 16;
    CancelRequest cancel = 17;
    MetadataRequest metadata = 18;
    InternalMessagesRequest internal_messages = 19;
    PythonPackagesRequest python_packages = 20;
    ShutdownRequest shutdown = 21;
    AttachRequest attach = 22;
    StatusRequest status = 23;
    ServerInfoRequest server_info = 24;
    SenderMarkRequest sender_mark = 25;
    SenderReadRequest sender_read = 26;
    StatusReportRequest status_report = 27;
    SummaryRecordRequest summary_record = 28;
    TelemetryRecordRequest telemetry_record = 29;
    JobInfoRequest job_info = 30;
    GetSystemMetricsRequest get_system_metrics = 31;
    FileTransferInfoRequest file_transfer_info = 32;
    SyncRequest sync = 33;
    JobInputRequest job_input = 34;
    TestInjectRequest test_inject = 1000;
  }
}

// Placeholder messages for request types (simplified)
message StopStatusRequest {}
message NetworkStatusRequest {}
message DeferRequest { int32 state = 1; }
message GetSummaryRequest {}
message LoginRequest { string api_key = 1; }
message PauseRequest {}
message ResumeRequest {}
message PollExitRequest {}
message SampledHistoryRequest {}
message PartialHistoryRequest { repeated HistoryItem item = 1; HistoryStep step = 2; HistoryAction action = 3; }
message HistoryAction { bool flush = 1; }
message RunStartRequest { RunRecord run = 1; }
message CheckVersionRequest {}
message LogArtifactRequest { ArtifactRecord artifact = 1; }
message DownloadArtifactRequest { string artifact_id = 1; }
message KeepaliveRequest {}
message RunStatusRequest {}
message CancelRequest { string cancel_slot = 1; }
message MetadataRequest {}
message InternalMessagesRequest {}
message PythonPackagesRequest { repeated PythonPackage package = 1; }
message PythonPackage { string name = 1; string version = 2; }
message ShutdownRequest {}
message AttachRequest { string attach_id = 1; }
message StatusRequest {}
message ServerInfoRequest {}
message SenderMarkRequest {}
message SenderReadRequest { int64 start_offset = 1; int64 final_offset = 2; }
message StatusReportRequest {}
message SummaryRecordRequest { SummaryRecord summary = 1; }
message TelemetryRecordRequest { TelemetryRecord telemetry = 1; }
message JobInfoRequest {}
message GetSystemMetricsRequest {}
message FileTransferInfoRequest {}
message SyncRequest { int64 start_offset = 1; int64 final_offset = 2; }
message JobInputRequest {}
message TestInjectRequest {}

// Simple timestamp (instead of google.protobuf.Timestamp)
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}
